--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 
 <html>
   <head>
+    <!-- CSS file -->
+    <link rel='stylesheet' type='text/css' href='main.css'>
+    
     <title>The Monty Hall Site</title>
   </head>
   <body>
-    <h1>The Monty Hall Site!</h1>
+    <h1 class='site_title'>The Monty Hall Site!</h1>
+
+    <!-- Scripts -->
+    <script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>
+    <script type="main.js"></script>
+
   </body>
 </html>
