--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
   <head>
     <!-- CSS file -->
     <link rel='stylesheet' type='text/css' href='main.css'>
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <title>The Monty Hall Site</title>
   </head>
   <body>
@@ -32,15 +32,17 @@
       <h1>Reset Doors</h1>
     </div> -->
 
-    <table class="bottom_table" style="width: 100%" cellspacing="15" border="10">
+    <table class="bottom_table" style="width: 100%" cellspacing="15" >
       <tr>
-        <td class="probability" style="width: 66%">0/0</td>
-        <td class="reset_count">Reset Count</td>
-        <td class="reset_button">Reset Doors</td>
+        <td class="probability_text" style="width: 32.5%">Current Probability &#8594;</td>
+        <!-- <td class="probability_arrow" style="width: 6%"></td> -->
+        <td class="probability" style="width: 32.5%">0/0</td>
+        <td class="reset_count">Reset Game</td>
+        <td class="reset_button">Try Again</td>
       </tr>
     </table>
 
-    <p class="copyright_bottom"><br><br>&copy; Guillermo Narvaez (2017)</p>
+    <p class="copyright_bottom"><br><br>&copy; Guillermo Narvaez 2017</p>
 
     <!-- Scripts -->
     <script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>
