--- a/home.html
+++ b/home.html
@@ -1,52 +1,14 @@
-<!DOCTYPE HTML>
-
+<!DOCTYPE html>
 <html>
   <head>
-    <!-- CSS file -->
     <link rel='stylesheet' type='text/css' href='main.css'>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <title>The Monty Hall Site</title>
   </head>
   <body>
-    <h1 class='site_title'>The Monty Hall Game Simulation</h1>
-
-    <div class="info">
-      <h1>INFO</h1>
-      <p class="description_text"><i>Suppose you're on a game show with Monty Hall, and you're given the choice of three doors: Behind one door is a car; behind the others, goats. You pick a door, say No. 1, and the host, who knows what's behind the doors, opens another door, say No. 3, which has a goat. He then says to you, "Do you want to pick door No. 2?" Is it to your advantage to switch your choice?</i><br><br>The answer is YES! You can use this simulator to experiment if changing doors over a relatively large number of trials is a better choice than sticking to the same door.<br><br>Why? When you first select a door you have a 1/3 chance of choosing the right door. This means that there is a 2/3 chance that the right door is one of the other two. So... when Monty Hall reveals that there's a goat behind one of the doors (one that you didn't originally picked) the 2/3 chance is redistributed into a single door. So when you switch your choice you are increaseing your chances of winning the car by 1/3... now there is a 66.6% chance you win the car!</p>
-    </div>
-
-    <p class="hint">Click on a door to find the price!</p>
-
-    <table class="doors_container" style="width: 100%" cellspacing="15">
-      <tr>
-        <td class="doors" id="one">Door One</td>
-        <td class="doors" id="two">Door Two</td>
-        <td class="doors" id="three">Door Three</td>
-      </tr>
-    </table>
-
-    <!-- <div class="probability">
-      <p>0/0</p>
-    </div>
-    <div class="reset_button">
-      <h1>Reset Doors</h1>
-    </div> -->
-
-    <table class="bottom_table" style="width: 100%" cellspacing="15" >
-      <tr>
-        <td class="probability_text" style="width: 32.5%">Current Probability &#8594;</td>
-        <!-- <td class="probability_arrow" style="width: 6%"></td> -->
-        <td class="probability" style="width: 32.5%">0/0</td>
-        <td class="reset_count">Reset Game</td>
-        <td class="reset_button">Try Again</td>
-      </tr>
-    </table>
-
+    <h1 class="home_screen_title">Welcome to the Monty Hall show.</h1>
+    <p class="home_text">A one-day HTML, CSS, and<br>Javascipt personal challenge.</p>
+    <p class="home_text"><br><a href="instructions.html">Click here for instructions.</a></p>
     <p class="copyright_bottom"><br><br>&copy; Guillermo Narvaez 2017</p>
-
-    <!-- Scripts -->
-    <script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>
-    <script src='main.js'></script>
-
   </body>
 </html>
