--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 
     <div class="info">
       <h1>INFO</h1>
-      <p class="description_text">Remember... you can make a first pick and Monty Hall will give you a very useful hint -- he will tell you behind which door there is a goat. After you are given this information you can decide if you want to definitely open the door you originally picked or if you want to open a different door. Careful... there is only one brand new car behind one of the doors.If I was you I would always switch doors when offered.<br> <br>To go back to the instructions page and read a more detailed explanation go <a class="link_info" href="instructions.html">here</a>.</p>
+      <p class="description_text">Remember... you can make a first pick and Monty Hall will give you a very useful hint &mdash; he will tell you behind which door there is a goat. After you are given this information you can decide if you want to definitely open the door you originally picked or if you want to open a different door. Careful... there is only one brand new car behind one of the doors. If I was you I would always switch doors when offered.<br> <br>To go back to the instructions page and read a more detailed explanation go <a class="link_info" href="instructions.html">here</a>.</p>
     </div>
 
     <p class="hint">Click on a door to find the price!</p>
